--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "bootstrap": "^4.0.0"
   }
 }
