--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "bootstrap": "^4.0.0"
+  },
+  "dependencies": {
+    "ccxt": "^1.10.1216"
   }
 }
