--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "bootstrap": "^4.0.0"
   },
   "dependencies": {
-    "ccxt": "^1.11.26"
+    "ccxt": "^1.11.26",
+    "json-rpc2": "^1.0.2",
+    "qrcode.react": "^0.8.0",
+    "react-qr-reader": "^2.1.0"
   }
 }
