--- a/package.json
+++ b/package.json
@@ -16,24 +16,21 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
+    "bootstrap": "^4.0.0",
     "css-loader": "^0.28.10",
-    "electron": "^1.8.2",
-    "electron-packager": "^11.0.1",
+    "electron": "^2.0.2",
+    "electron-packager": "^12.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "bootstrap": "^4.0.0"
+    "style-loader": "^0.20.3",
+    "webpack": "^4.12.0",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "ccxt": "^1.11.26",
-    "json-rpc2": "^1.0.2",
-    "qrcode.react": "^0.8.0",
-    "react-qr-reader": "^2.1.0"
+    "ccxt": "^1.11.26"
   }
 }
