--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.3",
     "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
